	======== 2.8.0 ============
2005-09-06  John Finlay  <finlay@moeraki.com>

	* pygtk2-ref.xml: Change date and version number.

	* pygtk-pangolayoutiter.xml (free): 
	* pygtk-gdkevent.xml (free): 
	* pygtk-gtktreerowreference.xml (free): 
	* pygtk-gtktreeiter.xml (free): 
	* pygtk-gtkrequisition.xml (free): 
	* pygtk-gtkiconsource.xml (free): 
	* pygtk-gtkborder.xml (free): 
	* pygtk-gtkiconinfo.xml (free): Add deprecation warning.

	* pygtk-gdkwindow.xml (set_urgency_hint): Add.

	* pygtk-gtkwindow.xml (set_urgency_hint, get_urgency_hint): Add.
	(present_with_time): Add.

	* pygtk-gtktreeview.xml (get_visible_range): Add.

	* pygtk-gtktreeviewcolumn.xml (queue_resize): Add.

	* pygtk-gtktreerowreference.xml (get_icon_name): Add.

	* pygtk-gtktoolbutton.xml (set_icon_name, get_icon_name): Add.

	* pygtk-gtkiconsource.xml (set_icon_name, get_icon_name): Add.

	* pygtk-gtktextiter.xml (forward_visible_cursor_position)
	(backward_visible_cursor_position, forward_visible_cursor_positions)
	(backward_visible_cursor_positions, forward_visible_line)
	(backward_visible_line, forward_visible_lines, backward_visible_lines):
	Add.

	* pygtk-gtk-stock-items.xml: Add STOCK_FULLSCREEN,
	STOCK_LEAVE_FULLSCREEN and STOCK_INFO.
	Fix XMl so RTL icons display correctly.

	* pygtk-gtksizegroup.xml (set_ignore_hidden, get_ignore_hidden): Add.

	* pygtk-gtkscrolledwindow.xml (get_hscrollbar, get_vscrollbar): Add.

	* pygtk-gtkmenushell.xml (set_take_focus, get_take_focus): Add.

	* pygtk-gtkmenubar.xml (set_pack_direction, get_pack_direction)
	(set_child_pack_direction, get_child_pack_direction): Add.

	* pygtk-gtkimage.xml (clear): Add.

	* pygtk-gtkiconview.xml (create_drag_icon, enable_model_drag_dest)
	(enable_model_drag_source, get_cursor, get_dest_item_at_pos)
	(get_drag_dest_item, get_item_at_pos, get_reorderable)
	(get_visible_range, scroll_to_path, set_cursor, set_drag_dest_item)
	(set_reorderable, unset_model_drag_dest, unset_model_drag_source): Add.
