@@ -2046,7 +2046,7 @@ method sets the "do-overwrite-confirmation" property to the value of
 <parameter>do_overwrite_confirmation</parameter> is <literal>TRUE</literal>
 and the "action" property is set to
 <literal>gtk.FILE_CHOOSER_ACTION_SAVE</literal>, the file chooser will
-present a onfirmation dialog if the user attempts to overwrite an existing
+present a confirmation dialog if the user attempts to overwrite an existing
 file. The default value is <literal>FALSE</literal>.</para>
 
       <para>If all you need is the stock confirmation dialog, set the
