@@ -697,7 +697,7 @@ available in.</simpara></listitem>
       <para>The <methodname>get_icon_sizes</methodname>() method returns a
 tuple containing the sizes available for the icon named by
 <parameter>icon_name</parameter>. A size of -1 means the icon is
-scalable. If the icon is not found an emty tuple is returned.</para>
+scalable. If the icon is not found an empty tuple is returned.</para>
 
     </refsect2>
 
