@@ -1886,7 +1886,8 @@ drag-and-drop.</para>
 	</varlistentry>
 	<varlistentry>
 	  <term><parameter role="keyword">pos</parameter>&nbsp;:</term>
-	  <listitem><simpara>specifies whether to drop, relative to the item</simpara></listitem>
+	  <listitem><simpara>specifies where to drop, relative to the
+item</simpara></listitem>
 	</varlistentry>
       </variablelist>
 
