@@ -203,12 +203,12 @@ linkend="method-gtklabel--set-single-line-mode">set_max_width_chars</link></meth
       </methodsynopsis>
       <methodsynopsis language="python">
 	<methodname><link
-linkend="method-gtklabel--get-single-line-mode">get_angle</link></methodname>
+linkend="method-gtklabel--get-angle">get_angle</link></methodname>
 	<methodparam></methodparam>
       </methodsynopsis>
       <methodsynopsis language="python">
 	<methodname><link
-linkend="method-gtklabel--set-single-line-mode">set_angle</link></methodname>
+linkend="method-gtklabel--set-angle">set_angle</link></methodname>
 	<methodparam><parameter
 		       role="keyword">angle</parameter></methodparam>
       </methodsynopsis>
