@@ -248,6 +248,10 @@ be ignored when calculating the size</simpara></listitem>
 	</varlistentry>
       </variablelist>
 
+      <note>
+        <para>This method is available in PyGTK 2.8 and above.</para>
+      </note>
+
       <para>The <methodname>set_ignore_hidden</methodname>() method sets the
 "ignore-hidden" property to the value of
 <parameter>ignore_hidden</parameter>. If
@@ -270,6 +274,10 @@ widgets will be ignored when calculating size.</para>
 ignored in size calculations.</simpara></listitem>
 	</varlistentry>
       </variablelist>
+
+       <note>
+        <para>This method is available in PyGTK 2.8 and above.</para>
+      </note>
 
       <para>The <methodname>get_ignore_hidden</methodname>() method returns
 the value of the "ignore-hidden" property of the size group. If
