@@ -445,7 +445,7 @@ END NOT IMPLEMENTED -->
         <methodparam><parameter role="keyword">user_data</parameter><initializer>None</initializer></methodparam>
       </methodsynopsis>
       <methodsynopsis language="python">
-        <methodname><link linkend="method-gtkiconview--get-visible-range">get_visible_range</link></methodname>
+        <methodname><link linkend="method-gtktreeview--get-visible-range">get_visible_range</link></methodname>
       </methodsynopsis>
 
     </classsynopsis>
