@@ -867,6 +867,11 @@ linkend="method-gtkwidget--set-activate-signal">set_scroll_adjustments_signal</l
 	<methodparam><parameter
 		       role="keyword">signal_name</parameter></methodparam>
       </methodsynopsis>
+      <methodsynopsis language="python">
+	<methodname><link
+linkend="method-gtkwidget--get-for-attach-widget">get_for_attach_widget</link></methodname>
+	<methodparam></methodparam>
+      </methodsynopsis>
     </classsynopsis>
 
 <programlisting>
@@ -6103,6 +6108,29 @@ the signal to be emitted when the widget has its scroll adjustments set for
 example by a call to the <link
 linkend="method-gtkwidget--set-scroll-adjustments"><methodname>set_scroll_adjustments</methodname>()</link>
 method.</para>
+
+    </refsect2>
+
+    <refsect2 id="method-gtkwidget--get-for-attach-widget">
+      <title>gtk.Widget.get_for_attach_widget</title>
+
+      <programlisting><methodsynopsis language="python">
+	  <methodname>get_for_attach_widget</methodname>
+	  <methodparam></methodparam>  </methodsynopsis></programlisting>
+      <variablelist>
+	<varlistentry>
+	  <term><emphasis>Returns</emphasis>&nbsp;:</term>
+	  <listitem><simpara>a list of the menus that are attached to this
+widget.</simpara></listitem>
+	</varlistentry>
+      </variablelist>
+
+      <note>
+        <para>This method is available in PyGTK 2.6 and above.</para>
+      </note>
+
+      <para>The <methodname>get_for_attach_widget</methodname>() method
+returns a list of the menus that are attached to this widget.</para>
 
     </refsect2>
 
