@@ -1,4 +1,8 @@
 	======== 2.8.0 ============
+2005-09-07  John Finlay  <finlay@moeraki.com>
+
+	* pygtk-gtkwidget.xml (get_for_attach_widget): Add.
+
 2005-09-06  John Finlay  <finlay@moeraki.com>
 
 	* pygtk2-ref.xml: Change date and version number.
